--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-
+  sliding_up_panel: ^2.0.0+1
+  animated_text_kit: ^4.2.2
 
 
   # The following adds the Cupertino Icons font to your application.
